[metadata]
name = classic-app-layer
version = 2.0.0
description = Provides primitives for application layer
author = Sergei Variasov
author_email = variasov@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/variasov/classic_app_layer
project_urls =
    Bug Tracker = https://github.com/variasov/classic_app_layer/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta


[options]
packages = find_namespace:
python_requires = >=3.10
package_dir =
    = sources
install_requires =
    pydantic>=2.6


[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=7.3.1
    pytest-cov~=4.0.0
    twine~=4.0.2
    build~=0.10.0
